Fixed the z-index issue with regular nav

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,4 +1,5 @@
 #header {
+  z-index: 9;
   flex-basis: 100%;
   position: fixed;
   top: 0;
